--- a/src/components/trade-list/index.module.scss
+++ b/src/components/trade-list/index.module.scss
@@ -1,6 +1,9 @@
 .table {
   &-base {
     width: 100%;
+    @media screen and (max-width: 1024px) {
+      width: 420px;
+    }
   }
   &-header {
     background: transparent;
@@ -20,6 +23,14 @@
     padding-left: 14px;
     padding-right: 10px;
     background: rgba(255, 255, 255, 0.05);
+
+    @media screen and (max-width: 1024px) {
+      padding-left: 8px;
+      padding-right: 8px;
+      background: rgba(255, 255, 255, 0.04);
+      height: 24px;
+      line-height: 24px;
+    }
   }
   &-body {
     padding: 0 16px;
@@ -37,6 +48,12 @@
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
+
+    @media screen and (max-width: 1024px) {
+      color: #eaecef;
+      line-height: 18px;
+      padding: 8px;
+    }
     &:hover {
       color: rgba(234, 236, 239, 1);
     }
