--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -17,6 +17,9 @@
 .select-inner-wrapper {
   width: 102px;
   height: 100%;
+  @media screen and (max-width: 1024px) {
+    font-size: 94px;
+  }
 }
 
 .select-value {
@@ -26,6 +29,10 @@
   font-style: normal;
   font-weight: 600;
   line-height: 150%;
+
+  @media screen and (max-width: 1024px) {
+    font-size: 12px;
+  }
 }
 
 .select-selector-icon {
