--- a/src/components/common/input/index.module.scss
+++ b/src/components/common/input/index.module.scss
@@ -18,7 +18,11 @@
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.12);
     background-color: transparent;
-    &:hover {
+    &-disabled {
+      opacity: 0.5;
+      pointer-events: none;
+    }
+    &:not(.input-base-disabled):hover {
       border-color: rgba(255, 255, 255, 0.8);
     }
   }
