--- a/src/components/common/drawer/bottom/index.module.scss
+++ b/src/components/common/drawer/bottom/index.module.scss
@@ -2,6 +2,7 @@
   &-base {
     display: flex;
     width: 100%;
+    max-height: 100%;
     // height: 100vh;
     padding: 0;
     background-color: transparent;
@@ -10,6 +11,9 @@
     background: rgba(2, 3, 8, 0.5);
   }
   &-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
   }
   &-header {
   }
